Se termina la app

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\netza\AppData\Local\Temp\testng-eclipse--16303742\testng-customsuite.xml</span>
+                    <span>C:\Users\netza\AppData\Local\Temp\testng-eclipse--1705079049\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,12 +103,12 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Hexaware.tests.UserRegistration" class="method navigator-link" hash-for-method="userCreateOpenAccount(nlimas, 123123)">userCreateOpenAccount(nlimas, 123123)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Hexaware.tests.UserOpenAccountProcess" class="method navigator-link" hash-for-method="loginParaBank(ocanchola, 432323)">loginParaBank(ocanchola, 432323)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="Hexaware.tests.UserRegistration" class="method navigator-link" hash-for-method="userCreateOpenAccount(ocanchola, 432323)">userCreateOpenAccount(ocanchola, 432323)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="Hexaware.tests.UserOpenAccountProcess" class="method navigator-link" hash-for-method="loginParaBank(nlimas, 123123)">loginParaBank(nlimas, 123123)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -126,23 +126,23 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">Hexaware.tests.UserRegistration</span>
+              <span class="class-name">Hexaware.tests.UserOpenAccountProcess</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="userCreateOpenAccount(nlimas, 123123)">
-                  </a> <!-- userCreateOpenAccount(nlimas, 123123) -->
-                  <span class="method-name">userCreateOpenAccount</span>
-                  <span class="parameters">(nlimas,123123)</span>
+                  <a name="loginParaBank(ocanchola, 432323)">
+                  </a> <!-- loginParaBank(ocanchola, 432323) -->
+                  <span class="method-name">loginParaBank</span>
+                  <span class="parameters">(ocanchola,432323)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="userCreateOpenAccount(ocanchola, 432323)">
-                  </a> <!-- userCreateOpenAccount(ocanchola, 432323) -->
-                  <span class="method-name">userCreateOpenAccount</span>
-                  <span class="parameters">(ocanchola,432323)</span>
+                  <a name="loginParaBank(nlimas, 123123)">
+                  </a> <!-- loginParaBank(nlimas, 123123) -->
+                  <span class="method-name">loginParaBank</span>
+                  <span class="parameters">(nlimas,123123)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -150,7 +150,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\netza\AppData\Local\Temp\testng-eclipse--16303742\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\netza\AppData\Local\Temp\testng-eclipse--1705079049\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -159,11 +159,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;Hexaware.tests.UserRegistration&quot;&gt;
+      &lt;class name=&quot;Hexaware.tests.UserOpenAccountProcess&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;userCreateOpenAccount&quot;/&gt;
+          &lt;include name=&quot;loginParaBank&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- Hexaware.tests.UserRegistration --&gt;
+      &lt;/class&gt; &lt;!-- Hexaware.tests.UserOpenAccountProcess --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -205,18 +205,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'userCreateOpenAccount')
-data.setCell(0, 2, 'Hexaware.tests.UserRegistration')
-data.setCell(0, 3, 2988);
+data.setCell(0, 1, 'loginParaBank')
+data.setCell(0, 2, 'Hexaware.tests.UserOpenAccountProcess')
+data.setCell(0, 3, 1900);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'userCreateOpenAccount')
-data.setCell(1, 2, 'Hexaware.tests.UserRegistration')
-data.setCell(1, 3, 2884);
+data.setCell(1, 1, 'loginParaBank')
+data.setCell(1, 2, 'Hexaware.tests.UserOpenAccountProcess')
+data.setCell(1, 3, 1855);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 seconds</span>
+              <span class="suite-total-time">Total running time: 3 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -231,15 +231,17 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
-              <span class="ignored-class-name">Hexaware.tests.UserRegistration</span>
+              <span class="ignored-class-name">Hexaware.tests.UserOpenAccountProcess</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">registerAccount</span>
                 <br/>
-                <span class="ignored-method-name">loginParaBank</span>
+                <span class="ignored-method-name">RegressionUserProcess</span>
+                <br/>
+                <span class="ignored-method-name">userCreateOpenAccount</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -251,30 +253,30 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">Hexaware.tests.UserRegistration</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">Hexaware.tests.UserOpenAccountProcess</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">launchingApplication</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">userCreateOpenAccount(nlimas, 123123)</span>
-                <span class="method-start">3682 ms</span>
+                <span class="method-name">loginParaBank(nlimas, 123123)</span>
+                <span class="method-start">4116 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">6673 ms</span>
+                <span class="method-start">5978 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
                 <span class="method-name">launchingApplication</span>
-                <span class="method-start">6675 ms</span>
+                <span class="method-start">6229 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">userCreateOpenAccount(ocanchola, 432323)</span>
-                <span class="method-start">8578 ms</span>
+                <span class="method-name">loginParaBank(ocanchola, 432323)</span>
+                <span class="method-start">8239 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">11464 ms</span>
+                <span class="method-start">10141 ms</span>
               </div> <!-- configuration-method after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
