--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,4 +1,5 @@
 <h2>Methods that were not run</h2><table>
-<tr><td>Hexaware.tests.UserRegistration.registerAccount</td></tr>
-<tr><td>Hexaware.tests.UserRegistration.loginParaBank</td></tr>
+<tr><td>Hexaware.tests.UserOpenAccountProcess.registerAccount</td></tr>
+<tr><td>Hexaware.tests.UserOpenAccountProcess.RegressionUserProcess</td></tr>
+<tr><td>Hexaware.tests.UserOpenAccountProcess.userCreateOpenAccount</td></tr>
 </table>
