--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,16 +1,16 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e1dd88">  <td>23/02/02 17:13:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchingApplication()[pri:0, instance:Hexaware.tests.UserRegistration@6e9175d8]">&gt;&gt;launchingApplication</td> 
-<td>&nbsp;</td>  <td>main@136393487</td>   <td></td> </tr>
-<tr bgcolor="e1dd88">  <td>23/02/02 17:13:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchingApplication()[pri:0, instance:Hexaware.tests.UserRegistration@6e9175d8]">&gt;&gt;launchingApplication</td> 
-<td>&nbsp;</td>  <td>main@136393487</td>   <td></td> </tr>
-<tr bgcolor="e1dd88">  <td>23/02/02 17:13:11</td>   <td>4789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Hexaware.tests.UserRegistration@6e9175d8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@136393487</td>   <td></td> </tr>
-<tr bgcolor="e1dd88">  <td>23/02/02 17:13:11</td>   <td>4789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Hexaware.tests.UserRegistration@6e9175d8]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@136393487</td>   <td></td> </tr>
-<tr bgcolor="6da36b">  <td>23/02/02 17:13:08</td>   <td>1903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegistration.userCreateOpenAccount(java.lang.String,java.lang.String)[pri:0, instance:Hexaware.tests.UserRegistration@6e9175d8]">userCreateOpenAccount</td> 
-  <td>main@136393487</td>   <td></td> </tr>
-<tr bgcolor="6da36b">  <td>23/02/02 17:13:08</td>   <td>1903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegistration.userCreateOpenAccount(java.lang.String,java.lang.String)[pri:0, instance:Hexaware.tests.UserRegistration@6e9175d8]">userCreateOpenAccount</td> 
-  <td>main@136393487</td>   <td></td> </tr>
+<tr bgcolor="e1dd88">  <td>23/02/06 14:19:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchingApplication()[pri:0, instance:Hexaware.tests.UserOpenAccountProcess@235ecd9f]">&gt;&gt;launchingApplication</td> 
+<td>&nbsp;</td>  <td>main@462526099</td>   <td></td> </tr>
+<tr bgcolor="e1dd88">  <td>23/02/06 14:19:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.launchingApplication()[pri:0, instance:Hexaware.tests.UserOpenAccountProcess@235ecd9f]">&gt;&gt;launchingApplication</td> 
+<td>&nbsp;</td>  <td>main@462526099</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>23/02/06 14:19:08</td>   <td>2010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserOpenAccountProcess.loginParaBank(java.lang.String,java.lang.String)[pri:0, instance:Hexaware.tests.UserOpenAccountProcess@235ecd9f]">loginParaBank</td> 
+  <td>main@462526099</td>   <td></td> </tr>
+<tr bgcolor="ce7ed4">  <td>23/02/06 14:19:08</td>   <td>2010</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserOpenAccountProcess.loginParaBank(java.lang.String,java.lang.String)[pri:0, instance:Hexaware.tests.UserOpenAccountProcess@235ecd9f]">loginParaBank</td> 
+  <td>main@462526099</td>   <td></td> </tr>
+<tr bgcolor="e1dd88">  <td>23/02/06 14:19:10</td>   <td>3912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Hexaware.tests.UserOpenAccountProcess@235ecd9f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@462526099</td>   <td></td> </tr>
+<tr bgcolor="e1dd88">  <td>23/02/06 14:19:10</td>   <td>3912</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.tearDown()[pri:0, instance:Hexaware.tests.UserOpenAccountProcess@235ecd9f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@462526099</td>   <td></td> </tr>
 </table>
